--- a/Azure_AD/AzureAD_Basics.ipynb
+++ b/Azure_AD/AzureAD_Basics.ipynb
@@ -19,9 +19,13 @@
  "cells": [
   {
    "source": [
-    "# Azure AD\n",
-    "\n",
-    "## <u>Overview</u>  \n",
+    "# <b><u>***Azure AD***</u><b>"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
     "The components of Azure AD are: \n",
     "\n",
     "+ Azure Active Directory Admin Center. (https://aad.portal.azure.com) \n",
@@ -34,20 +38,23 @@
     "+ Azure AD B2C:bLet's us handle the identity of individual customers who are using out public facing business application. \n",
     "+ Azure AD Connect : This is used to integrate the On-Premises Windows Active Directory with Azure AD for hybrid infrastructure.  \n",
     "+ Security. \n",
-    "+ Smarter.  "
+    "+ Smarter."
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "source": [
-    "\n",
-    " \n",
-    "## <u>Azure AD Connect</u>  \n",
-    "  \n",
-    "+ AD Connect integrates WS AD with Azure AD. \n",
-    "+ Installed on-premises on a member server. \n",
-    "+ It synchronizes users, groups and computer from on-premises to Azure AD. This is required when a user from on-premise tries to access an application hosted in the cloud, Azure AD recognizes them and authenticates them. \n",
+    "## <u>Azure AD Connect</u>"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "+ AD Connect integrates WS AD with Azure AD.\n",
+    "+ Installed on-premises on a member server.\n",
+    "+ It synchronizes users, groups and computer from on-premises to Azure AD. This is required when a user from on-premise tries to access an application hosted in the cloud, Azure AD recognizes them and authenticates them.\n",
     "+ Bidirectional flow if configuration changes. \n",
     "+ It also helps setup single sign on across the two environments.  \n",
     "+ One can also setup the federation if one has ADFS installed on-premises. This is only done in the cases where the authentication request has to happen in the on-premises and not in the cloud. \n",
