--- a/Azure_AD/AzureAD_Basics.ipynb
+++ b/Azure_AD/AzureAD_Basics.ipynb
@@ -19,7 +19,7 @@
  "cells": [
   {
    "source": [
-    "# <b><u>***Azure AD***</u><b>"
+    "# Azure AD"
    ],
    "cell_type": "markdown",
    "metadata": {}
