--- a/Azure_AD/AzureAD_Basics.ipynb
+++ b/Azure_AD/AzureAD_Basics.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "source": [
-    "## <u>Azure AD Connect</u>"
+    "## Azure AD Connect"
    ],
    "cell_type": "markdown",
    "metadata": {}
