--- a/Azure_AD/AzureAD_Basics.ipynb
+++ b/Azure_AD/AzureAD_Basics.ipynb
@@ -62,6 +62,28 @@
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "source": [
+    "## Azure AD Users and Groups Management  \n",
+    "  \n",
+    "There are three types of users in Azure AD:  \n",
+    "+ Federated Users.\n",
+    "+ Synchromized Users.\n",
+    "+ Cloud Only Users.  \n",
+    "  \n",
+    "The above categories of users are based on two factors:\n",
+    "+ The scope of operation of these accounts.  \n",
+    "+ Where does the authentication takes place.  \n",
+    "  \n",
+    "### Federated Users:  \n",
+    "+ We get FEDERATED USERS in Azure AD from environments where both Active Directory Domain Services(ADDS) and Active Directory Federation Services(ADFS) are present on-premises and users are synchronized to the cloud using Azure AD Connect.  \n",
+    "+ The scope of such account encompasses both the environments which means the Federated users can access the resources in the cloud as well as on-premises.\n",
+    "+ The authenitcation of the Federated users mainly takes place on-premises and not in the cloud.\n",
+    "+ This suits the organizations that wants to use the could but want to retain a strong control locally.  \n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ]
 }
