--- a/Azure_AD/AzureAD_Basics.ipynb
+++ b/Azure_AD/AzureAD_Basics.ipynb
@@ -80,7 +80,25 @@
     "+ We get FEDERATED USERS in Azure AD from environments where both Active Directory Domain Services(ADDS) and Active Directory Federation Services(ADFS) are present on-premises and users are synchronized to the cloud using Azure AD Connect.  \n",
     "+ The scope of such account encompasses both the environments which means the Federated users can access the resources in the cloud as well as on-premises.\n",
     "+ The authenitcation of the Federated users mainly takes place on-premises and not in the cloud.\n",
-    "+ This suits the organizations that wants to use the could but want to retain a strong control locally.  \n"
+    "+ This suits the organizations that wants to use the could but want to retain a strong control locally.  \n",
+    "  \n",
+    "### Synchronized Users:  \n",
+    "+ We get SYNCHRONIZED USERS in Azure AD from environments where only Active Directory Domain Services(ADDS) is present on-premises and users are synchronized to the cloud using Azure AD Connect.  \n",
+    "+ The scope of such account encompasses both the environments which means the Synchronized users can access the resources in the cloud as well as on-premises.\n",
+    "+ The authenitcation of the Synchronized users takes place in the cloud.\n",
+    "+ This suits the organizations that are a little more comfortable in embracing the cloud but still require on-primeses presence.  \n",
+    "\n",
+    "### Cloud Only Users:\n",
+    "+ These are users that are natively created in the cloud. \n",
+    "+ Scope of operation is only cloud.\n",
+    "+ Authentication happens only in the cloud.\n",
+    "+ This suits organizations that do not have AD infra on-premises or those who wants to prioritize the cloud first strategy.  \n",
+    "  \n",
+    "  \n",
+    "## Note:  \n",
+    "Both FEDERATED and SYNCHRONIZED users are also called HYBRID Users.  \n",
+    "  \n",
+    "\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
