--- a/Azure_AD/AzureAD_Basics.ipynb
+++ b/Azure_AD/AzureAD_Basics.ipynb
@@ -102,6 +102,28 @@
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "source": [
+    "## Groups  \n",
+    "  \n",
+    "There are two types of groups:\n",
+    "+ <u>Security Groups</u>\n",
+    "    + This has the same meaning of what security groups have in Normal Active Directory.\n",
+    "+ Office 365 Groups\n",
+    "    + These groups are used for both facilitation of collaboration among  the members of the groups as well as to give access to resources.\n",
+    "    + Office 365 Groups can provision a shared mailbox in exchange online, a site collection in sharepoint online, a chat room in MS Teams for the members of the groups to work on across apps.\n",
+    "\n",
+    "### Note:\n",
+    "Users of all the three group types i.e. Federated, Synchronized and Cloud only can be a member of both Security and Office 365 Groups.  \n",
+    "  \n",
+    "### Dynamic membership:  \n",
+    "    This is the property of the group where users are dynamically added to groups. For example if the user's department attribute is Marketting then the user is automatically added to the Marketting group.  \n",
+    "### Ownership Delegation:  \n",
+    "    This is the feature where the ownership of the group can be given to someone. This way we have one less thing to manage. "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ]
 }
